# cx-backend

./: .env.example  .gitignore  ALEMBIC_GUIDE.md  Dockerfile  alembic.ini  models_list.txt  pyproject.toml  readme.md  requirements.txt  save_to_github.sh
.emergent/: emergent.yml
app/: main.py
app/core/: config.py  db.py  security.py
app/middlewares/: error_middleware.py
app/migrations/: env.py
app/models/: __init__.py  campaign_goals_evaluator_model.py  campaign_goals_progress_model.py  campaign_model.py  campaign_user_model.py  campaign_zone_model.py  charts_campaign_views.py  company_campaign_analysis.py  company_model.py  dashboard_config_model.py  evaluation_analysis_model.py  evaluation_model.py  intelligence_model.py  notification_model.py  onboarding_model.py  payment_model.py  prompt_manager_model.py  survey_forms_model.py  survey_model.py  theme_model.py  user_evaluation_summary_model.py  user_model.py  user_zone_model.py  users_model.py  video_model.py  widget_model.py  zone_model.py
app/routes/: __init__.py  auth_router.py  campaign_assigment_users_router.py  campaign_assigment_zones_router.py  campaign_assignment_router.py  campaign_goals_evaluator_router.py  campaign_goals_progress_router.py  campaign_router.py  cloudflare_proxy_router.py  cloudflare_router.py  (+19 more)
docs/: ACCESSIBILITY.md  API_REFERENCE.md  ARCHITECTURE_MASTER.md  DEPLOYMENT.md  GUIA_DEPLOYMENT_MULTI_AMBIENTE.md  GUIA_DESARROLLADOR.md  GUIA_GUARDAR_GITHUB.md  GUIA_USUARIO.md  PROMPT_REFERENCE.md  TESTING.md  VERCEL_DEPLOYMENT.md
frontend/: .env
tests/: conftest.py  test_users.py
(+83 files in other folders)
