[project]
name = "vitacare-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "boto3>=1.38.29",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "moviepy>=2.2.1",
    "openai>=1.91.0",
    "pandas>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
]

[tool.ruff]
target-version = "py313"
exclude = ["alembic"]
